--- a/src/app/components/edit-client/edit-client.component.html
+++ b/src/app/components/edit-client/edit-client.component.html
@@ -1,3 +1,77 @@
-<p>
-  edit-client works!
-</p>
+<div class="row">
+  <div class="col-md-6">
+    <a routerLink="/client/{{id}}" class="btn btn-link">
+      <i class="fa fa-arrow-circle-o-left"></i>
+      Back to Client
+    </a>
+  </div>
+  <div class="col-md-6">
+
+  </div>
+</div>
+
+<div class="card">
+  <div class="card-header">
+    Edit Client
+  </div>
+  <div class="card-body">
+    <form #clientForm="ngForm" (ngSubmit)="onSubmit(clientForm)">
+      <div class="form-group">
+        <label for="firstName">First Name</label>
+        <input type="text" class="form-control" [ngClass]="{'is-invalid':clientFirstName.errors && clientFirstName.touched}" name="firstName"
+          #clientFirstName="ngModel" [(ngModel)]="client.firstName" minlength="2" required>
+        <div [hidden]="!clientFirstName.errors?.required" class="invalid-feedback">
+          First Name is required
+        </div>
+        <div [hidden]="!clientFirstName.errors?.minlength" class="invalid-feedback">
+          Must be at least 2 characters long
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="firstName">Last Name</label>
+        <input type="text" class="form-control" [ngClass]="{'is-invalid':clientLastName.errors && clientLastName.touched}" name="lastName"
+ #clientLastName="ngModel" [(ngModel)]="client.lastName" minlength="2" required>
+        <div [hidden]="!clientLastName.errors?.required" class="invalid-feedback">
+          Last Name is required
+        </div>
+        <div [hidden]="!clientLastName.errors?.minlength" class="invalid-feedback">
+          Must be at least 2 characters long
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="text" class="form-control" [ngClass]="{'is-invalid':clientEmail.errors && clientEmail.touched}" name="email"
+ #clientEmail="ngModel" [(ngModel)]="client.email" pattern="[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?"
+          required>
+        <div [hidden]="!clientEmail.errors?.required" class="invalid-feedback">
+          Email is required
+        </div>
+        <div [hidden]="!clientEmail.errors?.pattern" class="invalid-feedback">
+          Email is not valid
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="phone">Phone</label>
+        <input type="text" class="form-control" [ngClass]="{'is-invalid':clientPhone.errors && clientPhone.touched}" name="phone"
+ #clientPhone="ngModel" [(ngModel)]="client.phone" minlength="10" required>
+        <div [hidden]="!clientPhone.errors?.required" class="invalid-feedback">
+          Phone is required
+        </div>
+        <div [hidden]="!clientPhone.errors?.minlength" class="invalid-feedback">
+          Must be at least 10 characters long
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="balance">Balance</label>
+        <input type="number" class="form-control" name="balance" #clientPhone="ngModel" [(ngModel)]="client.balance" [disabled]="disableBalanceOnAdd">
+      </div>
+
+      <input type="submit" value="Submit" class="btn btn-primary btn-block">
+
+    </form>
+  </div>
+</div>
