--- a/src/app/components/edit-client/edit-client.component.html
+++ b/src/app/components/edit-client/edit-client.component.html
@@ -67,7 +67,7 @@
 
       <div class="form-group">
         <label for="balance">Balance</label>
-        <input type="number" class="form-control" name="balance" #clientPhone="ngModel" [(ngModel)]="client.balance" [disabled]="disableBalanceOnAdd">
+        <input type="number" class="form-control" name="balance" #clientPhone="ngModel" [(ngModel)]="client.balance" [disabled]="disableBalanceOnEdit">
       </div>
 
       <input type="submit" value="Submit" class="btn btn-primary btn-block">
